styling in process

--- a/index.html
+++ b/index.html
@@ -64,13 +64,15 @@
 						</div>
 					</div>
 					<div class="todos-footer">
-						<div class="items-left-qnt">5 items left</div>
+						<div class="items-left-qnt"><span class="items-left-qnt-span">5 items left</span></div>
 						<div class="todos-filter">
 							<button class="todos-filter-all-btn">All</button>
 							<button class="todos-filter-active-btn">Active</button>
 							<button class="todos-filter-completed-btn">Completed</button>
 						</div>
-						<div class="clear-completed-btn">Clear Completed</div>
+						<div class="clear-completed">
+							<button class="clear-completed-btn">Clear Completed</button>
+						</div>
 					</div>
 				</section>
 
