--- a/index.html
+++ b/index.html
@@ -85,8 +85,10 @@
 			</main>
 
 		</div> <!--wrapper-->
-	</div> <!--container>
+	</div> <!--container-->
 
+	<script src="js/app-view.js" type="text/javascript"></script>
+	<script src="js/app-model.js" type="text/javascript"></script>
 </body>
 
 </html>
