show todos and items left quantity are ready to use

--- a/index.html
+++ b/index.html
@@ -39,34 +39,13 @@
 
 				<section class="todo-list-section">
 					<div class="todos">
-						<div class="todo">
-							<input type="checkbox" checked class="checkbox">
-							<input type="text" value="Completed online JavaScript course" class="todo-done">
-						</div>
-						<div class="todo">
-							<input type="checkbox" class="checkbox">
-							<input type="text" value="Jog around the park 3x">
-						</div>
-						<div class="todo">
-							<input type="checkbox" class="checkbox">
-							<input type="text" value="10 minutes meditation">
-						</div>
-						<div class="todo">
-							<input type="checkbox" class="checkbox">
-							<input type="text" value="Read for 1 hour">
-						</div>
-						<div class="todo">
-							<input type="checkbox" class="checkbox">
-							<input type="text" value="Pick up groceries">
-						</div>
-						<div class="todo">
-							<input type="checkbox" class="checkbox">
-							<input type="text" value="Complete Todo App on Frontend Mentor">
+						<div class="there-is-no-todos">
+							Nothing to show
 						</div>
 					</div>
 
 					<div class="todos-footer">
-						<div class="items-left-qnt"><span class="items-left-qnt-span">5 items left</span></div>
+						<div class="items-left-qnt"><span class="items-left-qnt-span"></span></div>
 						<div class="todos-filter">
 							<button class="todos-filter-all-btn active-filter">All</button>
 							<button class="todos-filter-active-btn">Active</button>
