--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 					<div class="todos-footer">
 						<div class="items-left-qnt"><span class="items-left-qnt-span"></span></div>
 						<div class="todos-filter">
-							<button class="todos-filter-all-btn active-filter">All</button>
-							<button class="todos-filter-active-btn">Active</button>
-							<button class="todos-filter-completed-btn">Completed</button>
+							<button class="todos-filter-btn active-filter" data-id="all">All</button>
+							<button class="todos-filter-btn" data-id="active">Active</button>
+							<button class="todos-filter-btn" data-id="completed">Completed</button>
 						</div>
 						<div class="clear-completed">
 							<button class="clear-completed-btn">Clear Completed</button>
