create new todo is ready to use

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 			<main>
 				<section class="create-new-todo-section">
 					<div class="todo">
-						<input type="checkbox" class="checkbox" disabled>
-						<input type="text" placeholder="Create a new todo...">
+						<input type="checkbox" class="complete-checkbox" disabled>
+						<input type="text" placeholder="Create a new todo..." class="create-new-todo-txt">
 					</div>
 				</section>
 
