--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 
 			<header>
 				<div class="logo">Todo</div>
-				<button class="theme-switcher-btn"><img src="images/icon-moon.svg" alt="Theme Switcher Icon"></button>
+				<button class="theme-switcher-btn">
+					<img src="images/icon-moon.svg" id="themeIconImg" alt="Theme Switcher Icon"
+				</button>  
 			</header>
 
 			<main>
